...
                  fit: BoxFit.cover,
                ),
              ),

              SizedBox(height: vh > 767 ? 16 : 8),

              // --- "Login" title ---
              Text(
                "Login",
                style: textTheme.titleLarge!.copyWith(
                  color: colorScheme.primary,
                ),
              ),
...
                    "or ",
                    style: TextStyle(color: Colors.black54, fontSize: 15),
                  ),
                  GestureDetector(
                    onTap: widget.onTap,
                    child: Text(
                      "Sign up",
                      style: TextStyle(
                        color: colorScheme.primary,
                        fontWeight: FontWeight.bold,
                        fontSize: 15,
                      ),
                    ),
...
