...
                  ),

                  // --- Next / Enter Button ---
                  !onLastPage
                      ? GestureDetector(
                          onTap: _onNextPressed,
                          child: const Text("next"),
                        )
                      : GestureDetector(
                          onTap: _checkCode,
                          child: Container(
                            padding: const EdgeInsets.symmetric(
                              horizontal: 14,
...
                                      valueColor: AlwaysStoppedAnimation<Color>(
                                        Colors.white,
                                      ),
                                    ),
                                  )
                                : const Text(
                                    "enter",
                                    style: TextStyle(
                                      color: Colors.white,
                                      fontWeight: FontWeight.bold,
                                    ),
                                  ),
                          ),
...
